--- a/project-tearpillow/index.html
+++ b/project-tearpillow/index.html
@@ -17,7 +17,7 @@
   <body>
     <header class="topbar">
       <a class="home-link" href="../index.html">HOME</a>
-      <span class="sep">/</span>
+      <span class="sep">Yingyu Chen</span>
       <span class="current">TEAR PILLOW</span>
     </header>
 
@@ -156,9 +156,8 @@ The project attempts to create a situation in which emotion can be physically fe
           <h2 class="h2">3 — Process</h2>
           <figure class="text-card">
             <p><b>Early Prototype — Pneumatic Control System</b> 
-
 This early prototype explored air pressure as a control mechanism.
-The interaction was intentionally blunt: the harder you squeeze,
+The harder you squeeze,
 the more water flows out.
 
 What interested me was not precision, but discomfort.
