--- a/project-wetalk/index.html
+++ b/project-wetalk/index.html
@@ -72,10 +72,7 @@
         <section id="section0" class="block">
           <h2 class="h2">0 — Overview</h2>
           <div class="hero-inline">
-            <figure class="media hero-video">
-              <img src="https://via.placeholder.com/1200x800/e8e8e8/666?text=WeTalk+Hero" alt="WeTalk hero placeholder" />
-              <figcaption>Hero placeholder</figcaption>
-            </figure>
+            
 
             <figure class="text-card">
               <p>WeTalk 是一个交互作品，关于声音如何在空间里传递、打断、延迟。这里先用占位文字描述项目背景。</p>
@@ -104,10 +101,15 @@
               <figcaption>System diagram placeholder</figcaption>
             </figure>
             <figure class="media">
-              <video controls playsinline muted loop preload="auto" poster="https://via.placeholder.com/900x600/e8e8e8/666?text=Video+placeholder">
-                <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ElephantsDream.mp4" type="video/mp4" />
-              </video>
-              <figcaption>Video placeholder</figcaption>
+              <iframe
+                class="table-video"
+                src="https://player.vimeo.com/video/1152980226?autoplay=1&muted=1&loop=1&title=0&byline=0&portrait=0&playsinline=1"
+                title="System video"
+                frameborder="0"
+                allow="autoplay; fullscreen; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+              <figcaption>System video</figcaption>
             </figure>
           </div>
         </section>
