--- a/project-hahaha/index.html
+++ b/project-hahaha/index.html
@@ -19,7 +19,7 @@
 
     <header class="topbar">
       <a class="home-link" href="../index.html">HOME</a>
-      <span class="sep">/</span>
+         <span class="sep">Yingyu Chen</span>
       <span class="current">HAHAHA</span>
       <a class="next-link" href="detail.html">DETAIL</a>
     </header>
