--- a/project-tabletalk/index.html
+++ b/project-tabletalk/index.html
@@ -21,7 +21,7 @@
     <!-- Top bar -->
     <header class="topbar">
       <a class="home-link" href="../index.html">HOME</a>
-      <span class="sep">/</span>
+        <span class="sep">Yingyu Chen</span>
       <span class="current">TABLE TALK</span>
 
       <a class="next-link" href="#">NEXT</a>
