--- a/about.html
+++ b/about.html
@@ -71,8 +71,8 @@
             <a href="#section0">0 — Overview</a>
             <a href="#section1">1 — Bio</a>
             <a href="#section2">2 — Practice</a>
-            <a href="#section3">3 — Exhibitions</a>
-            <a href="#section4">4 — Contact</a>
+            <a href="#section3">3 — Contact</a>
+
           </nav>
 
           <div class="divider"></div>
@@ -81,6 +81,9 @@
             <a href="project-dating/dating.html">Dating Game →</a>
             <a href="project-tabletalk/index.html">Table Talk →</a>
             <a href="project-hahaha/index.html">Hahaha →</a>
+            <a href="project-wetalk/index.html">WeTalk →</a>
+            <a href="project-tearpillow/index.html">Tear Pillow →</a>
+            <a href="project-hair/hair.html">Unspoken Pain →</a>
           </div>
         </div>
       </aside>
@@ -143,26 +146,30 @@
               <figcaption>Table Talk</figcaption>
             </figure>
             <figure class="media">
-              <img src="project-dating/images/hold.png" alt="Timing test" />
-              <figcaption>Dating Game</figcaption>
+              <img src="project-wetalk/DSCF4760.JPG" alt="WeTalk still" />
+              <figcaption>WeTalk</figcaption>
             </figure>
             <figure class="media">
               <img src="project-hahaha/h32.JPG" alt="Soft sculpture" />
               <figcaption> Hahaha</figcaption>
             </figure>
              <figure class="media">
-              <img src="project-hahaha/h32.JPG" alt="Soft sculpture" />
-              <figcaption> Hahaha</figcaption>
+              <img src="project-dating/images/p1.jpg" alt="Dating Game" />
+              <figcaption>Dating Game</figcaption>
             </figure>
              <figure class="media">
-              <img src="project-hahaha/h32.JPG" alt="Soft sculpture" />
-              <figcaption> Hahaha</figcaption>
+              <img src="project-tearpillow/images/t46.JPG" alt="Tear Pillow" />
+              <figcaption>Tear Pillow</figcaption>
+            </figure>
+             <figure class="media">
+              <img src="project-hair/hairs/Unspoken_Pain.png" alt="Unspoken Pain" />
+              <figcaption>Unspoken Pain</figcaption>
             </figure>
           </div>
         </section>
 
-        <section id="section4" class="block">
-          <h2 class="h2">4 — Contact</h2>
+        <section id="section3" class="block">
+          <h2 class="h2">3 — Contact</h2>
           <div class="bilingual single-col">
             <div class="col">
               <p>
