--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Working across interactive installations, animation, and physical interfaces
             
                 
                 <a href="project-tabletalk/index.html" class="project-item p-tabletalk">
-                    <div class="box"><img class="thumb" src="project-tabletalk/good/1.png" alt="TableTalk cover"></div><p>TableTalk<br>2025</p>
+                    <div class="box"><img class="thumb" src="project-tabletalk/good/table1.jpg" alt="TableTalk cover"></div><p>TableTalk<br>2025</p>
                 </a>
                 <a href="project-wetalk/index.html" class="project-item p-diary">
                     <div class="box"><img class="thumb" src="project-wetalk/DSCF4760.JPG" alt="WeTalk cover"></div><p>WeTalk<br>2025</p>
